修复函数书写错误

--- a/IFE_JavaScript_Task_01.html
+++ b/IFE_JavaScript_Task_01.html
@@ -12,7 +12,7 @@
 <div>您输入的值是：<span id="aqi-display">尚无录入</span></div>
 
 <script type="text/javascript">
-    (function() ifeJavaScriptFirst {
+function ifeJavaScriptFirst() {
         /*
          在注释下方写下代码
          给按钮button绑定一个点击事件
@@ -23,7 +23,7 @@
         var aqi_display = document.getElementById('aqi-display');
         return aqi_display.innerHTML  = aqi_input.value;
 
-})();
+};
 
 </script>
 </body>
