--- a/IFEJavaScriptTask02.html
+++ b/IFEJavaScriptTask02.html
@@ -35,7 +35,6 @@
         8:"八",
         9:"九"
     };
-
     var aqiDataText = aqiData.join(); //将二维转换为字符串，并保存到变量
     var aqiDataTextArray = aqiDataText.split(',');  //将字符串拼接为一维数组，并保存到变量
    // alert(aqiDataTextArray[1]);测试一维数组是否拼接成功
@@ -43,7 +42,7 @@
     var aqiDataTextArrayLength = aqiDataTextArray.length; //创建用于保存数组长度的变量。
     // alert(aqiDataTextArrayLength); 测试数组长度
     var aqiDataTextArrayIndex = []; //创建一个用于保存空气质量指数的空数组
-
+    var aqiDataTextArrayPlace = []; //创建一个用于保存地点的空数组
 
     for(aqiDataNum = 0;aqiDataNum < aqiDataTextArrayLength;aqiDataNum++){
         if(aqiDataNum % 2 != 0){
@@ -53,7 +52,34 @@
     }
     //循环创建新数组，只保存空气质量指数
 
-    //alert(aqiDataTextArrayIndex[1]); 测试新数组
+    for(aqiDataNum = 0;aqiDataNum < aqiDataTextArrayLength;aqiDataNum++){
+        if(aqiDataNum % 2 == 0){
+            var aqiText = aqiDataTextArray[aqiDataNum];
+            aqiDataTextArrayPlace.push(aqiText);
+        }
+    }
+    //循环创建新数组，只保存地名
+
+//使用冒泡算法进行排序
+var aqiDataTextArrayIndexLength = aqiDataTextArrayIndex.length;
+    var t,q;
+    var i,j;
+    for(i = 0; i <= aqiDataTextArrayIndexLength-1; i++){
+        for(j = 0; j <= aqiDataTextArrayIndexLength - 1;j++){
+            if(Number(aqiDataTextArrayIndex[j]) < Number(aqiDataTextArrayIndex[j+1])){
+                t = aqiDataTextArrayIndex[j];
+                aqiDataTextArrayIndex[j] = aqiDataTextArrayIndex[j+1];
+                aqiDataTextArrayIndex[j+1] = t;
+
+
+
+                q = aqiDataTextArrayPlace[j];
+                aqiDataTextArrayPlace[j] = aqiDataTextArrayPlace[j+1];
+                aqiDataTextArrayPlace[j+1] = q;
+            }
+        }
+    }
+
 
 
     (function () {
@@ -68,6 +94,7 @@
         遍历读取城市数据。
         */
         var place,index;
+        var aqiDataArraySort = [];
 
         onload = function () {
             var IndexNum = 0;//计算排名
@@ -76,7 +103,7 @@
 
                     if((place == index) &&(aqiDataTextArrayIndex[place] > 60) ){
                         IndexNum++;
-                        aqi_list.innerHTML += "<li>" + "第" + IndexNum + "名：" + aqiData[place,index] + "</li>";
+                        aqi_list.innerHTML += "<li>" + "第" + IndexNum + "名：" + aqiDataTextArrayPlace[place] + aqiDataTextArrayIndex[index] + "</li>";
 
                     }
                 }
