--- a/IFEHTMLCSSTask01.html
+++ b/IFEHTMLCSSTask01.html
@@ -16,18 +16,42 @@
     <h3>文章二级标题</h3>
     <p>文章作者 文章发表时间</p>
 
-    <p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    <p>这是一<b>加粗</b>并且很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://www.sothx.com">这里有一个链接。</a> </p>
-    <<img src="images/2.jpg"/>
-    <input type="text" value="这是一个文本框">
-    <textarea>这是另外一个文本框</textarea>
+    <div>    <img src="images/2.png"/></div>
     <label>用于文本框的标题</label>
+    <br>
+    <input type="text" value="这是一个文本框">
+    <br>
+    <input type="button" value="按钮">
+    <br>
+    <input type="password" value="密码框">
+    <br>
+    <input type="checkbox" value="选项">
+    <br>
+    <textarea>这是另外一个文本框</textarea>
     <table border="1px">
-        <tr><td>1</td></tr>
-        <tr><td>2</td></tr>
-        <tr><td>3</td></tr>
+        <tr><td>我</td><td>是</td><td>表</td><td>格</td></tr>
+        <tr><td rowspan="2">合并了</td><td>1</td><td colspan="2">合并了</td></tr>
+        <tr><td rowspan="2">3</td><td>1</td><td>1</td></tr>
     </table>
+    <div>div常用于<span>块状化</span>布局网页</div>
+    <h4>文章三级标签</h4>
+    <h5>文章四级标题</h5>
+    <p>文章作者 文章发表时间</p>
 
+    <p>这是一<b>加粗</b>并且很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+    <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://www.sothx.com">这里有一个链接。</a> </p>
+
+    <select>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+    </select>
+
+<p>版权所有</p>
 
 </body>
 </html>
