--- a/IFEHTMLCSSTask01.html
+++ b/IFEHTMLCSSTask01.html
@@ -18,7 +18,7 @@
 
     <p>这是一<b>加粗</b>并且很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
     <p>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://www.sothx.com">这里有一个链接。</a> </p>
-    <div>    <img src="images/2.png"/></div>
+    <div>    <img src="http://www.sothx.com/ife_baidu/images/2.png"/></div>
     <label>用于文本框的标题</label>
     <br>
     <input type="text" value="这是一个文本框">
