--- a/IFEMultipleTask01.html
+++ b/IFEMultipleTask01.html
@@ -10,10 +10,10 @@
     <input type="button" value="验证" onclick="input1text();">
     <div id="input1_message"></div>
     <label>名称</label>
-    <input type="text"><input type="button" value="验证">
+    <input type="text"><input type="button" value="验证"  onclick="input1text();>
     <div  id="input2_message"></div>
     <label>名称</label>
-    <input type="text"><input type="button" value="验证">
+    <input type="text"><input type="button" value="验证"  onclick="input1text();>
     <div  id="input3_message"></div>
 </body>
 </html>
