--- a/IFEHTMLCSSTask06.html
+++ b/IFEHTMLCSSTask06.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>IFE HTML CSS Task 06</title>
 <link rel="stylesheet" href="css/newspaper.css">
 </head>
 
