重构代码优化

--- a/IFEJavaScriptTask02.html
+++ b/IFEJavaScriptTask02.html
@@ -38,7 +38,7 @@
             Num2[0] - Num1[0];
             return Num2[1] - Num1[1];
         });
-        //排除小于于60的值
+        //排除小于60的值
         aqiData = aqiData.filter(function (Num) {
             return Num[1] >=60;
         });
