--- a/IFEHTMLCSSTask08.html
+++ b/IFEHTMLCSSTask08.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,29 +16,24 @@
     </style>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-4">col-lg-4</div>
-            <div class="col-lg-4">col-lg-4</div>
-            <div class="col-lg-4">col-lg-4</div>
-        </div>
-        <div class="row">
-            <div class="col-lg-3">col-lg-3</div>
-            <div class="col-lg-3">col-lg-3</div>
-            <div class="col-lg-3">col-lg-3</div>
-            <div class="col-lg-3">col-lg-3</div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">col-md-3</div>
-            <div class="col-md-3">col-md-3</div>
-            <div class="col-md-3">col-md-3</div>
-            <div class="col-md-3">col-md-3</div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">col-sm-3</div>
-            <div class="col-sm-6">col-sm-6</div>
-            <div class="col-sm-3">col-sm-3</div>
-        </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 col-sm-6"></div>
+        <div class="col-md-4 col-sm-6"></div>
+        <div class="col-md-4 col-sm-12"></div>
     </div>
+    <div class="row">
+        <div class="col-md-3 col-sm-3"></div>
+        <div class="col-md-6 col-sm-6"></div>
+        <div class="col-md-3 col-sm-3"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 col-sm-2"></div>
+        <div class="col-md-1 col-sm-2"></div>
+        <div class="col-md-2 col-sm-8"></div>
+        <div class="col-md-2 col-sm-3"></div>
+        <div class="col-md-6 col-sm-3"></div>
+    </div>
+</div>
 </body>
 </html>
