--- a/IFEHTMLCSSTask08.html
+++ b/IFEHTMLCSSTask08.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IFT HTML CSS Task 08</title>
-    <link rel="stylesheet" href="css/IFEHTMLCSSTask08.css">
+    <link rel="stylesheet" href="IFEHTMLCSSTask08.css">
     <style>
         [class*="col-"]{
             border:#999 1px solid;
@@ -18,21 +18,21 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 col-sm-6"></div>
-        <div class="col-md-4 col-sm-6"></div>
-        <div class="col-md-4 col-sm-12"></div>
+        <div class="col-sm-4 col-xs-6"></div>
+        <div class="col-sm-4 col-xs-6"></div>
+        <div class="col-sm-4 col-xs-12"></div>
     </div>
     <div class="row">
-        <div class="col-md-3 col-sm-3"></div>
-        <div class="col-md-6 col-sm-6"></div>
-        <div class="col-md-3 col-sm-3"></div>
+        <div class="col-sm-3 col-xs-3"></div>
+        <div class="col-sm-6 col-xs-6"></div>
+        <div class="col-sm-3 col-xs-3"></div>
     </div>
     <div class="row">
-        <div class="col-md-1 col-sm-2"></div>
-        <div class="col-md-1 col-sm-2"></div>
-        <div class="col-md-2 col-sm-8"></div>
-        <div class="col-md-2 col-sm-3"></div>
-        <div class="col-md-6 col-sm-3"></div>
+        <div class="col-sm-1 col-xs-2"></div>
+        <div class="col-sm-1 col-xs-2"></div>
+        <div class="col-sm-2 col-xs-8"></div>
+        <div class="col-sm-2 col-xs-3"></div>
+        <div class="col-sm-6 col-xs-3"></div>
     </div>
 </div>
 </body>
